@@ -6,7 +6,7 @@
 //
 // ## BEGIN COPYRIGHT, LICENSE AND WARRANTY NOTICE ##
 // SOFTWARE NAME: eZ Online Editor MCE
-// SOFTWARE RELEASE: 4.x
+// SOFTWARE RELEASE: 5.x
 // COPYRIGHT NOTICE: Copyright (C) 1999-2008 eZ systems AS
 // SOFTWARE LICENSE: GNU General Public License v2.0
 // NOTICE: >
