@@ -20,9 +20,12 @@
     {def $custom_attributes           = array()
          $custom_attributes_defaults  = array()
          $custom_attributes_names     = array()
+         $custom_attributes_type      = array()
          $custom_attribute_default    = 0
-         $custom_attribute_list_name  = ''
+         $custom_attribute_settings   = ''
          $custom_attribute_id         = ''
+         $custom_attribute_type       = ''
+         $custom_attribute_disabled   = false()
          $shown_attributes            = array()}
     {if ezini_hasvariable( $:tag_name, 'CustomAttributes', 'content.ini' )}
         {set $custom_attributes = ezini( $:tag_name, 'CustomAttributes', 'content.ini' )}
@@ -33,13 +36,30 @@
     {if ezini_hasvariable( $:tag_name, 'CustomAttributesNames', 'content.ini' )}
         {set $custom_attributes_names = ezini( $:tag_name, 'CustomAttributesNames', 'content.ini' )}
     {/if}
+    {if ezini_hasvariable( $:tag_name, 'CustomAttributesType', 'content.ini' )}
+        {set $custom_attributes_type = ezini( $:tag_name, 'CustomAttributesType', 'content.ini' )}
+    {/if}
 
     <table class="properties custom_attributes" id="{$:tag_name}_customattributes"{if $:hide} style="display: none;"{/if}>
     {foreach $custom_attributes as $custom_attribute}
         {if $shown_attributes|contains( $custom_attribute )}{continue}{/if}
         {set $shown_attributes           = $shown_attributes|append( $custom_attribute )}
         {set $custom_attribute_id        = concat( $:tag_name, '_', $custom_attribute)|wash}
-        {set $custom_attribute_list_name = concat('CustomAttribute', $custom_attribute|upfirst, 'Selections')}
+        {if ezoe_ini_section( concat('CustomAttribute_', $:tag_name, '_', $custom_attribute), 'content.ini' )}
+            {set $custom_attribute_settings = concat('CustomAttribute_', $:tag_name, '_', $custom_attribute)}
+        {else}
+            {set $custom_attribute_settings = concat('CustomAttribute_', $custom_attribute)}
+        {/if}
+	    {if ezini_hasvariable( $custom_attribute_settings, 'Disabled', 'content.ini' )}
+	        {set $custom_attribute_disabled = ezini( $custom_attribute_settings, 'Disabled', 'content.ini' )|eq('true')}
+	    {else}
+            {set $custom_attribute_disabled = false()}
+	    {/if}
+	    {if is_set( $custom_attributes_type[ $custom_attribute ] )}
+	       {set $custom_attribute_type = $custom_attributes_type[ $custom_attribute ]}
+	    {else}
+	       {set $custom_attribute_type = 'text'}
+	    {/if}
         {set $custom_attribute_default   = first_set( $custom_attributes_defaults[$custom_attribute], '' )}
         <tr id="{$custom_attribute_id}">
             <td class="column1"><label for="{$custom_attribute_id}_source">
@@ -52,14 +72,19 @@
             {/if}
             </label></td>
             <td>
-            {if ezini_hasvariable( $:tag_name, $custom_attribute_list_name, 'content.ini' )}
-                <select name="{$custom_attribute}" id="{$custom_attribute_id}_source">
-                {foreach ezini( $:tag_name, $custom_attribute_list_name, 'content.ini' ) as $custom_value => $custom_name}
+            
+            {if $custom_attribute_type|eq('select')}
+                <select name="{$custom_attribute}" id="{$custom_attribute_id}_source"{if $custom_attribute_disabled} disabled="disabled"{/if}>
+                {foreach ezini( $custom_attribute_settings, 'Selection', 'content.ini' ) as $custom_value => $custom_name}
                     <option value="{$custom_value|wash}"{if $custom_value|eq( $custom_attribute_default )} selected="selected"{/if}>{$custom_name|wash}</option>
                 {/foreach}
                 </select>
+            {elseif $custom_attribute_type|eq('hidden')}
+                <input type="hidden" name="{$custom_attribute}" id="{$custom_attribute_id}_source" value="{$custom_attribute_default|wash}"{if $custom_attribute_disabled} disabled="disabled"{/if} />
+			{elseif $custom_attribute_type|eq('checkbox')}
+                <input type="checkbox" name="{$custom_attribute}" id="{$custom_attribute_id}_source" value="{$custom_attribute_default|wash}"{if $custom_attribute_disabled} disabled="disabled"{/if} />
             {else}
-                <input type="text" name="{$custom_attribute}" id="{$custom_attribute_id}_source" value="{$custom_attribute_default|wash}" />
+                <input type="text" name="{$custom_attribute}" id="{$custom_attribute_id}_source" value="{$custom_attribute_default|wash}"{if $custom_attribute_disabled} disabled="disabled"{/if} />
             {/if}
             </td>
         </tr>
