@@ -1,0 +1,16 @@
+#?ini charset="utf-8"?
+
+
+## Example for making image size name more human readablein Oe gui
+#[medium]
+#GUIName=Medium Size (200 x 290)
+#Reference=
+#Filters[]
+#Filters[]=geometry/scaledownonly=200;290
+
+## Example for hiding image size from OE gui drop down list
+#[large]
+#HideFromRelations=enabled
+#Reference=
+#Filters[]
+#Filters[]=geometry/scaledownonly=360;440
